deployments/kustomize/overlays/openshift/networking/allow-tcp-port-3306.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-tcp-port-3306
spec:
  podSelector:
    matchLabels:
      net-tcp-3306: "server"
  ingress:
  - from:
    - podSelector:
        matchLabels:
          net-tcp-3306: "client"
    ports:
    - protocol: TCP
      port: 3306
